syntax = "proto3";

option csharp_namespace = "FinancialOperations.Consolidator.Protos";

package operationsDay;

service OperationServiceProto {
    rpc CreateOperationAsync (CreateOperationCommand) returns (OperationResponse);
    rpc GetOperationAsync (GetOperationQuery) returns (OperationDaysResponse);
}


message CreateOperationCommand {
  string id = 1;
  string value = 2;
  string type = 3;
}

message GetOperationQuery {
  string year = 1;
}

message OperationResponse {
  string id = 1;
  string value = 2;
  string day = 3;
}

message OperationDay {
  string id = 1;
  string value = 2;
  string day = 3;
}

message OperationDaysResponse {
  repeated OperationDay operation_days = 1;
}

